# Site-LAMFO-API

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  check_db.py  crud.py  docker-compose.yml  lamfo_test.db  main.py  populate_db.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  schemas.py
.github/workflows/: docker-build-push.yml  prod.yml
app/: admin.py  crud.py  database.py  main.py  models.py  populate_db.py  schemas.py
tests/: conftest.py  test_api.py  test_coverage.py  test_crud.py  test_database.py  test_debug.py  test_main.py  test_postgres.py
